--- a/templates/system.yml.j2
+++ b/templates/system.yml.j2
@@ -6,52 +6,40 @@
 {% for config in metricbeat_modules[module_name].config %}
 - module: {{ module_name }}
   period: {{ config.period }}
+{# Metricsets #}
   metricsets:
 {% for metricset in config.metricsets %}
   - {{ metricset }}
 {% endfor %}
-{% for k, v in config.extra.items() %}
-  {{ k }} - {{ v }}
+{# Processors #}
+{% if config.processors is defined %}
+  processors:
+{% for processor in config.processors %}
+{% for processor_name, processor_value in processor.items() %}
+{% if processor_value is mapping %}
+  - {{ processor_name }}:
+{% for processor_element_key, processor_element_value in processor_value.items() %}
+      {{ processor_element_key }}: {{ processor_element_value }}
 {% endfor %}
-
+{% else %}
+  - {{ processor_name }}: {{ processor_value }}
+{% endif %}
+{% endfor %}
+{% endfor %}
+{% endif %}
+{# Extra configurations #}
+{% if config.extra is defined %}
+{% for key, value in config.extra.items() %}
+{% if value is mapping %}
+  {{ key }}:
+{% for value_key, value_element in value.items() %}
+    {{ value_key }}: {{ value_element }}
+{% endfor %}
+{% else %}
+  {{ key }}: {{ value }}
+{% endif %}
 {% endfor %}
 {% endif %}
 
-
-- module: system
-  period: 10s
-  metricsets:
-    - cpu
-    - load
-    - memory
-    - network
-    - process
-    - process_summary
-    - socket_summary
-    #- entropy
-    #- core
-    #- diskio
-    #- socket
-  process.include_top_n:
-    by_cpu: 5      # include top 5 processes by CPU
-    by_memory: 5   # include top 5 processes by memory
-
-- module: system
-  period: 1m
-  metricsets:
-    - filesystem
-    - fsstat
-  processors:
-  - drop_event.when.regexp:
-      system.filesystem.mount_point: '^/(sys|cgroup|proc|dev|etc|host|lib)($|/)'
-
-- module: system
-  period: 15m
-  metricsets:
-    - uptime
-
-#- module: system
-#  period: 5m
-#  metricsets:
-#    - raid
-#  raid.mount_point: '/'
+{% endfor %}
+{% endif %}
