--- a/templates/modules/system.yml.j2
+++ b/templates/modules/system.yml.j2
@@ -2,8 +2,7 @@
 # Docs: https://www.elastic.co/guide/en/beats/metricbeat/7.5/metricbeat-module-system.html
 {% set module_name = "system" %}
 
-{% if metricbeat_modules[module_name].enabled == true %}
-{% for config in metricbeat_modules[module_name].config %}
+{% for config in module_config %}
 - module: {{ module_name }}
   period: {{ config.period }}
 {# Metricsets #}
@@ -42,4 +41,3 @@
 {% endif %}
 
 {% endfor %}
-{% endif %}
