--- a/templates/modules/nginx.yml.j2
+++ b/templates/modules/nginx.yml.j2
@@ -17,7 +17,7 @@
     - {{ host }}
 {% endfor %}
 {# Path to server status. Default server-status #}
-  server_status_path: {{ config.server_status_path | default("nginx_status" }}
+  server_status_path: {{ config.server_status_path | default("nginx_status") }}
 {# Username #}
 {% if config.username is defined %}
   username: {{ config.username }}
