Added mssql module

--- a/templates/modules/mssql.yml.j2
+++ b/templates/modules/mssql.yml.j2
@@ -1,8 +1,8 @@
 {{ ansible_managed | comment }}
 
-# Module: apache
-# Docs: https://www.elastic.co/guide/en/beats/metricbeat/7.x/metricbeat-module-apache.html
-{% set module_name = "apache" %}
+# Module: mssql
+# Docs: https://www.elastic.co/guide/en/beats/metricbeat/7.x/metricbeat-module-mssql.html
+{% set module_name = "mssql" %}
 
 {% for config in module_config %}
 
